--- a/src/Pages/Form_wrapper/Desktop_add/Components/Button/Button.module.css
+++ b/src/Pages/Form_wrapper/Desktop_add/Components/Button/Button.module.css
@@ -1,3 +1,23 @@
+@media (max-width:1200px) {
+
+    .button{
+
+        width: 110px;
+        height: 40px;
+        outline: none;
+        border: none;
+        margin-top: 40px;
+        font-size: 17px;
+        color: white;
+        border-radius: 5px;
+        animation: fade-in 0.8s;
+        margin-right: 5px;
+    
+    }
+}
+
+@media (min-width:1200px) {
+
 .button{
 
     width: 110px;
@@ -15,6 +35,8 @@
 
 .button:hover{
     cursor: pointer;
+}
+
 }
 
 @keyframes fade-in {
