--- a/src/Pages/Form_wrapper/Desktop_add/Desktop_add.module.css
+++ b/src/Pages/Form_wrapper/Desktop_add/Desktop_add.module.css
@@ -8,9 +8,12 @@
         animation: slide-left 0.5s forwards;
         position: fixed;
         right: -50vw;
+        background-image: url("../../../Assets/Backgrounds/mobile_add_book.svg");
+        background-size: cover;
     }
+
     .form_container {
-        height: 300px;
+
         font-family: 'Roboto', sans-serif;
         margin-left: 20px;
         display: flex;
@@ -18,16 +21,18 @@
     }
     .title {
         font-size: 28px;
+        font-weight: 900;
     }
 
     .form_message {
-        font-size: 22px;
+        font-size: 23px;
+        margin-top: -30px;
     }
 
     .button_container {
 
         display: flex;
-        margin-top: 10px;
+        margin-top: 0px;
     }
 
 }
@@ -39,6 +44,15 @@
     100% {
         right: 0vw;
     }
+
+}
+
+@media (min-height: 600px){
+
+    .container{
+        background-image: url("../../../Assets/Backgrounds/long_mobile_add_book.svg");
+    }
+
 }
 
 /* landscape */
