--- a/src/Shared Components/Image_upload_old/Image_upload.module.css
+++ b/src/Shared Components/Image_upload_old/Image_upload.module.css
@@ -3,15 +3,14 @@
     .container{
 
         width: 225px;
-        height: 350px;
+        height: 100px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         position: relative;
-        margin-top: 20px;
         background-color: #f8f8f8;
-        padding-top: 30px;
+        margin-top: 15px;
         
     }
     
@@ -21,14 +20,14 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    
+
     }
     
     .icon{
         width: 65px;
         height: 65px;
-        margin-left: 7px;
-        margin-top: -25px;
+        margin-left: -38px;
+        margin-top: 15px;
     }
     
     .choose_file_container{
@@ -37,12 +36,12 @@
         position: absolute;
         border: 0.5px solid rgba(0, 0, 0, 0.192);
         right: 50px;
+        margin-top: 25px;
+
     }
     
     .chosen_photo_container{
-        position: absolute;
-        top: 64%;
-        width: 100%;
+
         text-align: center;
     }
     
@@ -51,29 +50,40 @@
     }
 
     .upload_button, .change_button{
-        height: 30px;
-        width: 85px;
+        height: 25px;
+        width: 75px;
         display: flex;
         justify-content: center;
         align-items: center;
         color: white;
         animation: slide-in 1s forwards;
+        font-family: Arial, Helvetica, sans-serif;
     }
     
+    .choose_file{
+
+        position: relative;
+        top: 8px;
+    }
+
     .button_container{
         display: flex;
         flex-direction: row;
         width: 100%;
-        position: absolute;
-        bottom: -35px;
         justify-content: space-evenly;
-    
+        width: 170px;
+        margin-top: 45px;
+        margin-right: 50px;
+        
+
     }
     
     .preview_img{
-        height: 83px;
-        width: 175px;
-        margin-bottom: 53px;
+        max-height: 75px;
+        max-width: 150px;
+        margin-bottom: 75px;
+        margin-right: 47px;
+        margin-top: 75px;
     }
     
     .upload_button{
