--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -47,10 +47,26 @@
 
 }
 
-@media (min-height: 600px){
+@media (min-height: 550px){
 
     .container{
         background-image: url("../../Assets/Backgrounds/long_mobile_add_book.svg");
+    }
+
+}
+
+@media (min-height: 750px){
+
+    .container{
+        background-image: url("../../Assets/Backgrounds/portrait_tablet_add_book.svg");
+    }
+
+}
+
+@media (min-height:400px) and (min-width: 900px){
+
+    .container{
+        background-image: url("../../Assets/Backgrounds/landscape_tablet_add_book.svg");
     }
 
 }
@@ -88,10 +104,6 @@
 /* Small landscape tablet */
 
 @media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {
-
-    .container{
-        background-image: url("../../Assets/Backgrounds/add_book.svg");
-    }
 
     .form_container{
         margin-top: 20px;
@@ -133,16 +145,16 @@
 
     @supports (-webkit-touch-callout: none) {
 
+        .container{
+            background-image: url("../../Assets/Backgrounds/portrait_ipad_add_book.svg");
+        }
+
     }
 }
 
 /* medium landscape tablet */
 
 @media (min-height:500px) and (min-width: 1000px) {
-
-    .container{
-        background-image: url("../../Assets/Backgrounds/add_book.svg");
-    }
 
     .form_container{
         margin-top: 20px;
@@ -169,6 +181,9 @@
             display: block;
         }
 
+        .container{
+            background-image: url("../../Assets/Backgrounds/landscape_ipad_add_book.svg");
+        }
     }
 }
 
@@ -177,20 +192,13 @@
 @media (min-height:1200px) and (min-width: 1000px) and (max-width: 1200px) {
 
     .container{
-        background-image: url("../../Assets/Backgrounds/long_mobile_add_book.svg");
+        background-image: url("../../Assets/Backgrounds/portrait_ipad_add_book.svg");
     }
 
     .form_container{
         margin-top: 50px;
     }
 
-}
-
-/* large landscape tablet */
-
-@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px) {
-
-    @supports (-webkit-touch-callout: none) {}
 }
 
 /*Standard desktop */
@@ -236,13 +244,21 @@
     }
 }
 
-/*Standard desktop */
-
-@media (min-height: 900px) {
+/*large  */
+@media (min-height: 900px) and (min-width:1200px) {
 
     .form_container{
         margin-top: 150px;
         margin-left: 100px;
     }
 
+}
+
+/* large landscape tablet */
+
+@media (width:1366px) and (height:954px){
+
+    .container{
+        background-image: url("../../Assets/Backgrounds/landscape_ipad_large_add_book.svg");
+    }
 }
