--- a/src/Shared Components/Options_bar/Option/Option.module.css
+++ b/src/Shared Components/Options_bar/Option/Option.module.css
@@ -1,7 +1,21 @@
 .icon{
     height: 50px;
     width: 50px;
-    margin-bottom: 10px;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+p{
+    margin: 0;
+    padding: 0;
+    color: black;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* large portrait tablet */
