--- a/src/Shared Components/Options_bar/Options_bar.module.css
+++ b/src/Shared Components/Options_bar/Options_bar.module.css
@@ -1,52 +1,98 @@
 .container {
-    width: 100%;
-    height: 10%;
+    width: 350px;
+    height: 150px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    background-color: #f8f8ff;
+    flex-wrap: wrap;
     align-items: center;
-    position: absolute;
-    bottom: 2vh;
+    justify-content: space-evenly;
+    z-index: 3;
+    border-radius: 5px;
+    animation: explode 0.7s;
+    position: relative;
 }
 
-.inner_container{
+@keyframes explode{
+
+    0%{
+        transform: scale(0.0);
+        left: 50vw;
+        top: 100vw;
+    }
+
+    90%{
+        transform: scale(0.6);
+    }
+    100%{
+        transform: scale(1);
+        left: 0;
+        top:0;
+    }
+}
+
+.icon_container{
+
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
+    background-color: #f8f8ff;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: space-evenly;
+
+
 }
+
+.open_icon{
+
+    position: fixed;
+    top: 22px;
+    right: 15px;
+    z-index: 2;
+    width: 25px;
+    height: 25px;
+}
+
+.overlay{
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.452);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn .3s;
+}
+
+.prompt_message{
+    font-size: 25px;
+    font-family: 'Roboto', sans-serif;
+}
+
+@keyframes fadeIn{
+    0%{
+       left: -100vw;
+    }
+
+    100%{
+        left:0
+    }
+}
+
 
 @media (orientation:landscape){
 
-    .container{
-
-        margin-bottom: 2vh;
-        position: fixed;
-    }
 }
 
 /*Standard desktop */
 
 @media (min-width: 1200px) {
 
-.container{
-    width: 100%;
-    background-color: #F8F8FF;
-}
 
-.container{
-    position: fixed;
-    bottom: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 0;
-}
-
-.inner_container{
-    width: 50%;
-}
 
 
 }
