--- a/src/Pages/Form/Components/Search/Search.module.css
+++ b/src/Pages/Form/Components/Search/Search.module.css
@@ -15,9 +15,11 @@
     flex-direction: column;
     align-items: center;
     border-radius: 5px;
-    box-shadow: 4px 4px 8px 4px rgba(128, 128, 128, 0.534);
+    box-shadow: 3px 3px 6px 3px rgba(128, 128, 128, 0.534);
     background-color: white;
     position: relative;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .image_container {
@@ -62,7 +64,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    top: 0px;
+    top: 20%;
     position: absolute;
     right: 55px;
     flex-direction: column;
@@ -86,4 +88,11 @@
     position: absolute;
     top: 21px;
     right: 15px;
+}
+
+@media (min-width:1200px){
+
+    .container{
+        background-color: transparent;
+    }
 }
