--- a/src/Pages/Form/Components/Book/Book.module.css
+++ b/src/Pages/Form/Components/Book/Book.module.css
@@ -6,6 +6,8 @@
     align-items: center;
     flex-direction: column;
     background-color: #f8f8ff;
+    margin-left: 100px;
+    background-color: aqua;
 }
 
 .card {
@@ -90,14 +92,13 @@
     right: 15px;
 }
 
-.cog:hover{
+.cog:hover {
     cursor: pointer;
     transform: scale(1.05);
 }
 
-@media (min-width:1200px){
-
-    .container{
+@media (min-width:1200px) {
+    .container {
         background-color: transparent;
     }
 }
