--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -4,7 +4,7 @@
     .container {
         width: 100%;
         height: 100%;
-        animation: slide-left 0.5s forwards;
+        animation: slide-left 0.1s forwards;
         position: fixed;
         right: -50vw;
     }
@@ -52,15 +52,7 @@
 
 }
 
-.book_container{
 
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
 
 /* Small portrait tablet */
 @media (min-height:700px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
@@ -208,7 +200,16 @@
     .form_input::placeholder {
         color: rgba(0, 0, 0, 0.384);
     }
-    .button_container {
+    .book_container{
+
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .button_container{
         display: flex;
     }
 }
@@ -220,6 +221,7 @@
         margin-top: 150px;
         margin-left: 100px;
     }
+    
 
 }
 
