--- a/src/Shared Components/Image_upload_/Image_upload.module.css
+++ b/src/Shared Components/Image_upload_/Image_upload.module.css
@@ -10,6 +10,26 @@
     position: relative;
     overflow: hidden;
     margin-left: 10px;
+    animation: explode 0.1s;
+}
+
+@keyframes explode{
+
+    0%{
+        transform: scale(0.0);
+    }
+    25%{
+        transform: scale(0.25);
+    }
+    50%{
+        transform: scale(0.5);
+    }
+    75%{
+        transform: scale(0.75);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 .successful_upload_container{
