--- a/src/Pages/Form/Background_image.module.css
+++ b/src/Pages/Form/Background_image.module.css
@@ -84,6 +84,10 @@
            background-image: url("../../Assets/Backgrounds/portrait_ipad_add_book.svg");
        } 
 
+       .search{
+           background-image: url("../../Assets/Backgrounds/portrait_ipad_search.svg");
+       } 
+
        .worth{
            background-image: url("../../Assets/Backgrounds/portrait_ipad_worth.svg");
        } 
