--- a/src/Pages/Form/Components/Book/Book.module.css
+++ b/src/Pages/Form/Components/Book/Book.module.css
@@ -5,9 +5,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #f8f8ff;
-    margin-left: 80px;
-    background-color: aqua;
+    margin-top: 20px;
 }
 
 .card {
@@ -72,7 +70,7 @@
     flex-direction: column;
     height: 150px;
     background-color: white;
-    width: 55px;
+    width: 50px;
     box-shadow: 2px 2px 4px 2px rgba(128, 128, 128, 0.534);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -81,7 +79,7 @@
 }
 
 .nav_open {
-    right: -55px;
+    right: -50px;
 }
 
 .cog {
@@ -97,8 +95,29 @@
     transform: scale(1.05);
 }
 
+/* medium landscape tablet */
+@media (min-height:400px) and (min-width: 800px) and (max-height: 750px) and (max-width: 1199px) {
+    
+    .container {
+        background-color: transparent;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-top: 0;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+
+
+    }
+
+    
+}
+
 @media (min-width:1200px) {
     .container {
         background-color: transparent;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-top: 0;
     }
 }
