--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -7,6 +7,8 @@
         animation: slide-left 0.1s forwards;
         position: fixed;
         right: -50vw;
+        overflow-y: scroll;
+        
     }
 
     .form_container {
@@ -15,6 +17,8 @@
         margin-left: 20px;
         display: flex;
         flex-direction: column;
+        margin-top: 30px
+        
 
     }
     .title {
@@ -52,6 +56,30 @@
 
 }
 
+.book_container{
+    margin-top: 50px;
+    background-color: #fcfcff;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 100px;
+}
+
+.go_back_button{
+    color: white;
+    width: 120px;
+    height: 40px;
+    background-color:#3676e8;
+    font-weight: 500;
+    font-size: 20px;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+
+.go_back_button:hover{
+    cursor: pointer;
+}
 
 
 /* Small portrait tablet */
@@ -65,6 +93,7 @@
     .form_message{
         font-size: 40px;
         margin-top: 15px;
+        width: 80%;
     }
 
     .form_container{
@@ -133,20 +162,52 @@
         margin-top: 20px;
     }
 
+    .book_container{
+
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 0;
+
+    }
+    
+    .book_inner_container{
+        display: flex;
+    }
+
+    .button_container{
+        display: flex;
+    }
+
+    .go_back_button{
+        color: white;
+        width: 120px;
+        height: 40px;
+        background-color:#3676e8;
+        font-weight: 500;
+        font-size: 20px;
+        border-radius: 5px;
+        margin-top: 40px;
+    }
+    .go_back_button:hover{
+        cursor: pointer;
+    }
+
     @supports (-webkit-touch-callout: none) {
 
 
     }
+
+    
 }
 
 /* large portrait tablet */
 
 @media (min-height:1200px) and (min-width: 1000px) and (max-width: 1199px) {
 
-
-    .form_container{
-        margin-top: 50px;
-    }
 
     .title{
         font-size: 50px;
@@ -159,7 +220,7 @@
     }
 
     .form_container{
-        margin-top: 250px;
+        margin-top: 50px;
         margin-left: 100px;
     }
 
@@ -206,11 +267,32 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: row;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 0;
+
+    }
+    
+    .book_inner_container{
+        display: flex;
     }
 
     .button_container{
         display: flex;
+    }
+
+    .go_back_button{
+        color: white;
+        width: 120px;
+        height: 40px;
+        background-color:#3676e8;
+        font-weight: 500;
+        font-size: 20px;
+        border-radius: 5px;
+        margin-top: 40px;
+    }
+    .go_back_button:hover{
+        cursor: pointer;
     }
 }
 
@@ -227,9 +309,6 @@
 
 @media (min-height: 900px) and (min-width:1500px) {
 
-    .book_container{
-        margin-left: 200px;
-    }
 }
 
 /* large landscape tablet */
@@ -247,7 +326,7 @@
 
     .form_container{
         margin-left: 200px;
-        margin-top: 200px;
+        margin-top: 50px;
         width: 800px;
     }
 }
