--- a/src/Pages/Dashboard/Components/Condition_card/Condition_card.module.css
+++ b/src/Pages/Dashboard/Components/Condition_card/Condition_card.module.css
@@ -1,27 +1,29 @@
 .container {
-    width: 26%;
+    width: 80px;
+    height: 30px;
     border-radius: 5px;
     box-shadow: 2px 2px 3px 2px #d3d3d3;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-around;
     position: relative;
     background-color: whitesmoke;
     color: white;
+    margin-top: 8px;
 }
 
 .title {
-    font-size: 1.2rem;
-    margin-top: 5px;
+    font-size: 20px;
     font-family: 'Exo 2', sans-serif;
     color: white;
 }
 
 .number {
-    font-size: 50px;
-    margin-top: 5px;
+    font-size: 20px;
     color: white;
-    margin-bottom: 5px;
+
+
 }
 
 @media (orientation:landscape) {
