--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -6,6 +6,34 @@
     position: relative;
 }
 
+.chart_container{
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chart_selection_container{
+
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 85px;
+}
+
+.icon{
+
+    height: 50px;
+    width: 50px;
+   
+    border: 5px solid rgba(128, 128, 128, 0.308);
+    border-radius: 500px;
+    box-shadow: 1px 1px 3px 1px grey;
+
+}
+
 
 /* landscape */
 
