--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -1,4 +1,4 @@
-.click_prevent_overlay{
+.click_prevent_overlay {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -7,8 +7,8 @@
 }
 
 /* portrait phone*/
-@media (max-width:1200px) {
 
+@media (max-width:1200px) {
     .container {
         width: 100%;
         height: 100%;
@@ -16,39 +16,30 @@
         position: fixed;
         right: -50vw;
         overflow-y: scroll;
-        
     }
-
     .form_container {
-
         font-family: 'Roboto', sans-serif;
         margin-left: 20px;
         display: flex;
         flex-direction: column;
         margin-top: 30px
-        
-
     }
     .title {
         font-size: 28px;
         font-weight: 900;
         margin: 0;
     }
-
     .form_message {
         font-size: 23px;
         margin-top: 20px;
     }
-
     .button_container {
-
         display: flex;
         margin-top: -5px;
     }
-
 }
 
-.dimensions{
+.dimensions {
     position: fixed;
     right: 0;
     top: 0;
@@ -61,10 +52,9 @@
     100% {
         right: 0vw;
     }
-
 }
 
-.book_container{
+.book_container {
     margin-top: 50px;
     background-color: #fcfcff;
     min-height: 100%;
@@ -74,104 +64,87 @@
     padding-bottom: 100px;
 }
 
-.go_back_button{
+.go_back_button {
     color: white;
     width: 120px;
     height: 40px;
-    background-color:#3676e8;
+    background-color: #3676e8;
     font-weight: 500;
     font-size: 20px;
     border-radius: 5px;
     margin-top: 30px;
 }
 
-.go_back_button:hover{
+.go_back_button:hover {
     cursor: pointer;
 }
 
-
 /* Small portrait tablet */
-@media (min-height:700px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
 
-    .title{
+@media (min-height:700px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+    .title {
         font-size: 50px;
         margin: 0;
     }
-
-    .form_message{
+    .form_message {
         font-size: 40px;
         margin-top: 15px;
         width: 80%;
     }
-
-    .form_container{
+    .form_container {
         margin-top: 30px;
     }
-
 }
 
 /* Small landscape tablet */
-@media (min-height:400px) and (min-width: 800px) and (max-height: 600px) and (max-width: 1023px) {
 
-    .form_container{
+@media (min-height:400px) and (min-width: 800px) and (max-height: 600px) and (max-width: 1023px) {
+    .form_container {
         margin-top: 20px;
     }
-
-
-    .title{
+    .title {
         font-size: 40px;
         margin: 0;
     }
-
-    .form_message{
+    .form_message {
         margin-top: 15px;
         font-size: 30px;
     }
 }
 
 /* medium portrait tablet */
-@media (min-height:700px) and (min-width: 500px) and (max-height: 1050px) and (max-width: 800px) {
 
-    .title{
+@media (min-height:700px) and (min-width: 500px) and (max-height: 1050px) and (max-width: 800px) {
+    .title {
         font-size: 60px;
         margin: 0;
         padding: 0;
     }
-
-    .form_message{
+    .form_message {
         font-size: 45px;
         margin-top: 20px;
     }
-
-    .form_container{
+    .form_container {
         margin-top: 40px;
-    }
-
-    @supports (-webkit-touch-callout: none) {
-
     }
 }
 
 /* medium landscape tablet */
-@media (min-height:400px) and (min-width: 800px) and (max-height: 750px) and (max-width: 1199px) {
 
-    .form_container{
+@media (min-height:400px) and (min-width: 800px) and (max-height: 750px) and (max-width: 1199px) {
+    .form_container {
         margin-top: 20px;
     }
-
-    .title{
+    .title {
         font-size: 60px;
         margin: 0;
         padding: 0;
     }
-
-    .form_message{
+    .form_message {
         font-size: 45px;
         margin-top: 20px;
     }
-
-    .book_container{
-
+    .book_container {
         height: 100%;
         display: flex;
         justify-content: center;
@@ -179,64 +152,48 @@
         flex-direction: column;
         width: 100%;
         margin-top: 0;
-
     }
-    
-    .book_inner_container{
+    .book_inner_container {
         display: flex;
     }
-
-    .button_container{
+    .button_container {
         display: flex;
     }
-
-    .go_back_button{
+    .go_back_button {
         color: white;
         width: 120px;
         height: 40px;
-        background-color:#3676e8;
+        background-color: #3676e8;
         font-weight: 500;
         font-size: 20px;
         border-radius: 5px;
         margin-top: 40px;
     }
-    .go_back_button:hover{
+    .go_back_button:hover {
         cursor: pointer;
     }
-
-    @supports (-webkit-touch-callout: none) {
-
-
-    }
-
-    
 }
 
 /* large portrait tablet */
 
 @media (min-height:1200px) and (min-width: 1000px) and (max-width: 1199px) {
-
-
-    .title{
+    .title {
         font-size: 50px;
         margin: 0;
     }
-
-    .form_message{
+    .form_message {
         font-size: 40px;
         margin-top: 15px;
     }
-
-    .form_container{
+    .form_container {
         margin-top: 50px;
         margin-left: 100px;
     }
-
 }
 
 /*Standard desktop */
-@media (min-width: 1200px) {
 
+@media (min-width: 1200px) {
     .container {
         width: 100%;
         height: 100%;
@@ -245,7 +202,6 @@
         right: -50vw;
         display: flex;
     }
-
     .form_container {
         display: flex;
         flex-direction: column;
@@ -269,8 +225,7 @@
     .form_input::placeholder {
         color: rgba(0, 0, 0, 0.384);
     }
-    .book_container{
-
+    .book_container {
         height: 100%;
         display: flex;
         justify-content: center;
@@ -278,63 +233,49 @@
         flex-direction: column;
         width: 100%;
         margin-top: 0;
-
     }
-    
-    .book_inner_container{
+    .book_inner_container {
         display: flex;
     }
-
-    .button_container{
+    .button_container {
         display: flex;
     }
-
-    .go_back_button{
+    .go_back_button {
         color: white;
         width: 120px;
         height: 40px;
-        background-color:#3676e8;
+        background-color: #3676e8;
         font-weight: 500;
         font-size: 20px;
         border-radius: 5px;
         margin-top: 40px;
     }
-    .go_back_button:hover{
+    .go_back_button:hover {
         cursor: pointer;
     }
 }
 
-
-
 /*large  */
-@media (min-height: 900px) and (min-width:1200px) {
 
-    .form_container{
+@media (min-height: 900px) and (min-width:1200px) {
+    .form_container {
         margin-top: 150px;
         margin-left: 100px;
     }
-    
-
 }
 
-@media (min-height: 900px) and (min-width:1500px) {
-
-}
+@media (min-height: 900px) and (min-width:1500px) {}
 
 /* large landscape tablet */
 
-@media (width:1366px) and (height:954px){
-
-
-    .title{
+@media (width:1366px) and (height:954px) {
+    .title {
         margin: 0;
     }
-
-    .form_message{
+    .form_message {
         margin-top: 20px;
     }
-
-    .form_container{
+    .form_container {
         margin-left: 200px;
         margin-top: 50px;
         width: 800px;
