--- a/src/Pages/Form/Components/Book/Book.module.css
+++ b/src/Pages/Form/Components/Book/Book.module.css
@@ -1,12 +1,13 @@
 .container {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-top: 20px;
     position: relative;
+    background-color: #f8f8ff;
+    padding-bottom: 50px;
 }
 
 .card {
@@ -21,6 +22,7 @@
     position: relative;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    margin-top: 30px;
 }
 
 .image_container {
@@ -96,14 +98,30 @@
     transform: scale(1.05);
 }
 
+.go_back_button {
+    color: white;
+    width: 120px;
+    height: 40px;
+    background-color: #3676e8;
+    font-weight: 500;
+    font-size: 20px;
+    border-radius: 5px;
+    margin-top: 40px;
+}
+.go_back_button:hover {
+    cursor: pointer;
+}
+
 /* medium landscape tablet */
 @media (min-height:400px) and (min-width: 800px) and (max-height: 750px) and (max-width: 1199px) {
 
-    .container {
-        background-color: transparent;
-        margin-left: 40px;
-        margin-right: 40px;
-        margin-top: 0;
+    .container{
+        flex-direction: row;
+    }
+
+    .card{
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
     @supports (-webkit-touch-callout: none) {
@@ -115,10 +133,21 @@
 }
 
 @media (min-width:1200px) {
-    .container {
-        background-color: transparent;
-        margin-left: 40px;
-        margin-right: 40px;
-        margin-top: 0;
+
+
+    .container{
+
+        flex-direction: column;
+    }
+
+    .card_container{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .card{
+        margin-left: 30px;
+        margin-right: 30px;
     }
 }
