--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -54,7 +54,7 @@
     }
 }
 
-.book_container {
+.page_container {
     margin-top: 50px;
     background-color: #fcfcff;
     min-height: 100%;
@@ -62,6 +62,7 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 100px;
+   
 }
 
 .go_back_button {
@@ -144,7 +145,7 @@
         font-size: 45px;
         margin-top: 20px;
     }
-    .book_container {
+    .page_container {
         height: 100%;
         display: flex;
         justify-content: center;
@@ -153,7 +154,7 @@
         width: 100%;
         margin-top: 0;
     }
-    .book_inner_container {
+    .book_cards_container {
         display: flex;
     }
     .button_container {
@@ -225,7 +226,7 @@
     .form_input::placeholder {
         color: rgba(0, 0, 0, 0.384);
     }
-    .book_container {
+    .page_container {
         height: 100%;
         display: flex;
         justify-content: center;
@@ -234,7 +235,7 @@
         width: 100%;
         margin-top: 0;
     }
-    .book_inner_container {
+    .book_cards_container {
         display: flex;
     }
     .button_container {
