--- a/src/Pages/Form/Components/Book/Book.module.css
+++ b/src/Pages/Form/Components/Book/Book.module.css
@@ -140,7 +140,7 @@
         flex-direction: column;
     }
 
-    .card_container{
+    .cards_container{
         display: flex;
         flex-direction: row;
         justify-content: center;
