--- a/src/Shared Components/Image_upload_/Components/Uploaded_image/Uploaded_image.module.css
+++ b/src/Shared Components/Image_upload_/Components/Uploaded_image/Uploaded_image.module.css
@@ -1,7 +1,3 @@
-.revert_button{
-    width: 115px;
-    margin-top: 4px;
-}
 
 .successful_upload_container{
     display: flex;
@@ -14,4 +10,23 @@
     width:100%;
     height: 68%;
     object-fit: contain;
+}
+
+.revert_button{
+    width: 115px;
+    margin-top: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    animation: slide-in 1s forwards;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 5px;
+    z-index: 999;
+}
+
+.change_button:hover, .upload_button:hover, .revert_button:hover{
+
+    cursor: pointer;
+
 }
