--- a/src/Pages/Form/Components/Book/Book.module.css
+++ b/src/Pages/Form/Components/Book/Book.module.css
@@ -8,6 +8,7 @@
     position: relative;
     background-color: #f8f8ff;
     padding-bottom: 50px;
+    padding-bottom:100px;
 }
 
 .card {
@@ -104,7 +105,7 @@
     height: 40px;
     background-color: #3676e8;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 18px;
     border-radius: 5px;
     margin-top: 40px;
 }
