--- a/src/Pages/Form/Components/Book/Book.module.css
+++ b/src/Pages/Form/Components/Book/Book.module.css
@@ -7,8 +7,7 @@
     margin-top: 20px;
     position: relative;
     background-color: #f8f8ff;
-    padding-bottom: 50px;
-    padding-bottom:100px;
+    min-height: 100%;
 }
 
 .card {
