--- a/src/Pages/Dashboard/Components/Grid/Components/Search_bar/Search_bar.module.css
+++ b/src/Pages/Dashboard/Components/Grid/Components/Search_bar/Search_bar.module.css
@@ -1,13 +1,10 @@
-.container{
-
+.container {
     display: flex;
     width: 100%;
     justify-content: center;
-
 }
 
-.input{
-
+.input {
     height: 30px;
     width: 250px;
     border-radius: 15px;
@@ -15,10 +12,38 @@
     outline: none;
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.363);
     margin-bottom: 25px;
-    padding-left: 10px;
+    padding-left: 35px;
     padding-top: 5px;
+    padding-bottom: 5px;
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
+    transition: border 0.6s ease-in-out;
+    margin-left: 17px;
+}
 
+.active_input {
+    border: 3px solid;
+}
+
+.input::placeholder {
+    position: relative;
+    left: 5px;
+}
+
+.input:focus::placeholder {
+    color: transparent;
+}
+
+.icon, .active_icon {
+    height: 20px;
+    width: 20px;
+    position: relative;
+    right: 275px;
+    top: 10px;
+}
+
+.active_icon {
+    top: 13px;
+    right: 278px;
 }
